EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==01/14/2009
Derision: Fixed makefile references for rulesys.o
Derision: Mapped field in LogServer_Struct to allow voice macro window to be opened (needs work on Opcodes to make it functional).

==01/12/2009
Derision: Removed code that stole all your money if you logged on with more than 1 million of any denomination of coin on your person.

==01/11/2009
Angelox: Bots: Added rule 'EQOffline:BotCount' defaults to 5, for desired amount of bots in the group - values are 0-5 (0 means bots are disabled, max limit is 5). 
Derision: Mail/Chatchannels: Added sanity check on packet size in EQPacket::ChatDecode.
Derision: Mail/Chatchannels: Increased stream timeout from 45 to 135 seconds.
Derision: Mail: Use correct opcodes for sending Headers.  **utils/mail_opcodes.conf updated**
Derision: Chatchannels: Recognise and ignore AFK command.
Derision: Chatchannels: Added uptime command (usage ;uptime or /chat uptime).
Congdar: Bots: Added Lore item check to command #bot inventory remove

==01/08/2009
Congdar: Bots: Fix compile issue under linux for Visible Gear update.

Angelox: Bots: Updated required SQL, utils/sql/svn/250_bot_spell_update.sql (some spells were still being auto-casted)
Derision: Chatserver: Fix for crash when multiple connections are made in quick succession.

==01/07/2009
Angelox: Bots: Added command '#bot charm' (requires enchanter in group). Charm does not work while Chanter has pet so I added the grouped Chanters pet to '#bot group remove' (remove the pet before #bot charm).
Angelox: Bots: '#bot sow wolf' should not affect pets anymore.
Derision: Chatserver: Added some extra syntax error checking to prevent crashes.
Angelox: Bots: Added Wizard class and level check to the '#bot evac' command
Angelox: Bots: Added '#bot invis see' for see invisible
Required SQL: 