@@ -415,3 +415,5 @@ N(OP_PopupResponse),
 N(OP_DeleteCharge),
 N(OP_PotionBelt),
 N(OP_Barter),
+N(OP_VoiceMacroIn),
+N(OP_VoiceMacroOut),
