@@ -450,6 +450,8 @@ OP_PlayerUnderWorld=0x46d9
 OP_WeaponEquip1=0x6c5e
 OP_WeaponEquip2=0x63da
 OP_WeaponUnequip2=0x381d
+OP_VoiceMacroIn=0x2866
+OP_VoiceMacroOut=0x2ec6
 
 #named unknowns, to make looking for real unknown easier
 OP_AnnoyingZoneUnknown=0x0000		# EQEmu 06/29/05
