@@ -468,6 +468,8 @@ OP_PickLockSuccess=0x40E7
 OP_WeaponEquip1=0x6c5e
 OP_WeaponEquip2=0x63da
 OP_WeaponUnequip2=0x381d
+OP_VoiceMacroIn=0x2866		# Client to Server
+OP_VoiceMacroOut=0x2ec6		# Server to Client
 
 #named unknowns, to make looking for real unknown easier
 OP_AnnoyingZoneUnknown=0x729c
