@@ -38,6 +38,7 @@ public:
 	bool SendChannelMessage(Client* from, const char* to, int8 chan_num, int32 guilddbid, int8 language, const char* message, ...);
 	bool SendEmoteMessage(const char* to, int32 to_guilddbid, int32 type, const char* message, ...);
 	bool SendEmoteMessage(const char* to, int32 to_guilddbid, sint16 to_minstatus, int32 type, const char* message, ...);
+	bool SendVoiceMacro(Client* From, int32 Type, char* Target, int32 MacroNumber, int32 GroupOrRaidID = 0);
 	void SetZone(int32 iZoneID);
 	int32 SendGroupIdRequest();
 	bool RezzPlayer(EQApplicationPacket* rpack,int32 rezzexp, int16 opcode);
